# routes/productRoutes.js
@@ -18,36 +18,7 @@ router.get('/',
 
   router.put('/:id',
    /* #swagger.tags = ['Products']
-     #swagger.description = 'Update a product by ID'
-     #swagger.parameters['id'] = { description: 'Product ID' }
-     #swagger.requestBody = {
-       required: true,
-       content: {
-         "application/json": {
-           schema: {
-             type: "object",
-             properties: {
-               name: { type: "string" },
-               description: { type: "string" },
-               price: { type: "number" },
-               stock: { type: "number" },
-               category: { type: "string" },
-               image: { type: "string" }
-             },
-             required: ["name","price","stock","image"]
-           },
-           example: {
-             name: "Wireless Headset Updated",
-             description: "Updated description",
-             price: 109.99,
-             stock: 25,
-             category: "electronics",
-             image: "https://example.com/images/headset1.jpg"
-           }
-         }
-       }
-     }
-  */
+     #swagger.description = 'Update a product' */
   updateProductById
 );
 
